--- a/components/builder/SortableBlock/SortableBlock.module.css
+++ b/components/builder/SortableBlock/SortableBlock.module.css
@@ -18,6 +18,7 @@
   box-sizing: border-box;
   cursor: grab;
   user-select: none;
+  overflow: hidden;
 }
 
 .wrapper.dragging {
@@ -28,9 +29,11 @@
 .content {
   width: 100%;
   height: 100%;
+  min-width: 0;
 }
 
 .blockContent {
   width: 100%;
   height: 100%;
+  min-width: 0;
 }
